syntax = "proto3";

package register;

option go_package = "github.com/Ks89/air-conditioner/api-server/register";

service Registration {
  rpc Register (RegisterRequest) returns (RegisterReply) {}
}

message RegisterRequest {
  string id = 1;
  string uuid = 2;
  string mac = 3;
  string name = 4;
  string manufacturer = 5;
  string model = 6;
  string profileOwnerId = 7;
  string apiToken = 8;
}

message RegisterReply {
  string status = 1;
  string message = 2;
}